# CMake

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  TestCmake1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  main.ilk  main.vcxproj  main.vcxproj.filters
cmakeQuickStart/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.x
cmakeQuickStart/Src/: CMakeCache.txt  CMakeLists.txt  Calculator.cpp  Makefile  cmake_install.cmake  complex.cpp
cmakeQuickStart/Src/Src/: Makefile  cmake_install.cmake
cmakeQuickStart/Src/include/: Calculator.h  complex.h
cmakeQuickStart/googletest/googletest/: CMakeCache.txt
src/: class.cpp
